Repair discovery claims, deferred credit and recipe evidence